Gradle-Plugin: prepare for Gradle configuration cache
Gradle's configuration cache aims to prevent running (expensive) code to
configure the build (tasks, et al). Preventing configuration can save a
(comparatively) huge amount of time, especially on small/tiny CI
machines (looking at you, GH standard hosted runner).

But to be able to use the configuration cache, the build itself and all
plugins must respect a couple of rules. Gradle types that must not be
referenced during task _execution_ are for example: `Project`,
`Configuration`, `Task` and some more. Those need to be replaced with
either more specialized types or with different mechanisms.

Test note: The Quarkus plugin in all released versions (at least up to
3.0.0.CR1) cannot be used with Gradle's configuration cache. The tests
that use the Quarkus plugin do not enable Gradle's configuration cache.

See [Gradle build cache requirements](https://docs.gradle.org/8.0.2/userguide/configuration_cache.html#config_cache:requirements).