@@ -49,6 +49,9 @@ test {
     // multiple Gradle invocations executed from the same testing JVM cause problems, so fork
     // for each test, and make sure we only run one Gradle execution in each test
     forkEvery 1
+    // For Gradle testing :(
+    jvmArgs("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED")
 }
 
 gradlePlugin {
